Remove all calls to the deprecated Runtime.exec(String command) method in setup and updater functions